<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_day"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    tools:context=".DayFragment">

    <Button
        android:id="@+id/buttonDatePick"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:hint="@string/pick_a_date"
        android:textColor="#000000"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toStartOf="@+id/textViewTodaysDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="70dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:hint="@string/save"
        android:textColor="#000000"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextHowWasIt"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:enabled="true"
        android:focusable="true"
        android:foregroundGravity="top"
        android:gravity="top"
        android:hint="@string/how_was_your_day"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:maxLines="8"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonColor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonColor"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/color_of_the_day"
        android:textColor="#000000"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDatePick"
        app:rippleColor="@color/white"
        app:strokeColor="@color/white" />

    <TextView
        android:id="@+id/textViewTodaysDate"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonDatePick"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
